[tool.poetry]
name = "maxcutpy"
version = "0.1.0"
description = "A python Implementation of Graph Max Cut Solutions"
authors = ["trevorWieland <trevor_wieland@mac.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.19.5"
pandas = "^1.1.5"
networkx = "^2.5.1"
scikit-learn = "^0.24.2"
tqdm = "^4.61.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
